<resources>
    <string name="app_name">Sub1Movie</string>
    <string name="tidak_ada_data">Tidak Ada Data</string>
    <string name="label_error">Error</string>
    <string name="label_title">Title</string>
    <string name="label_release">Released Date</string>
    <string name="label_vote">Average Vote</string>
    <string name="label_overview">Overview</string>
    <string name="image_description">Poster Image</string>
</resources>
